# badge-generator

./: .gitignore  .ruff.toml  Dockerfile  README.md  badge-generator.nginx  compose.yml  pyproject.toml
.config/: config.example.toml
src/badge_gen/cache/: base.py  redis.py
src/badge_gen/cachers/: base.py  redis.py
src/badge_gen/fetchers/: leetcode.py  utils.py
src/badge_gen/handlers/: __init__.py  leetcode.py
src/badge_gen/main/: config.py  entrypoint.py
src/badge_gen/main/di/: providers.py
