[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "badge-generator"
description = "Badge generator for different services"
readme = "README.md"

version = "0.1.0"

requires-python = ">=3.12"
dependencies = [
    "dishka>=1.5.3",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.4",
    "redis>=6.0.0",
    "uvicorn[standard]>=0.34.2",
]

[tool.setuptools.packages.find]
where = ["src"]
